--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
         Fancy display heading
         <small class="text-muted">With faded secondary text</small>
       </h1>
+
+      <blockquote class="blockquote">
+        <p class="mb-0">Certified good webpage</p>
+        <footer class="blockquote-footer">
+          Marcus Billman på <cite title="Source Title">En Lektion</cite>
+        </footer>
+      </blockquote>
     </main>
 
     <footer class="footer mt-auto">
